add navbar for user

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -4,6 +4,7 @@
     "back": "Назад",
     "continue": "Продовжити",
     "next": "Далі",
+    "search": "Пошук",
     "login": {
         "title": "Вхід",
         "link": "Не маєте облікового запису?",
@@ -28,7 +29,7 @@
         "strong": "Сильний"
     },
     "register": {
-        "entry_data": "Введення потрібних даних",
+        "entry_data": "Введення    даних",
         "create_pswd": "Створення паролю",
         "confirm_email": "Підтвердження пошти",
         "agree": "Реєструючись, ви походжуєтеся з нашими ",
@@ -68,5 +69,20 @@
         "male": "Чоловік",
         "female": "Жінка",
         "not-selected": "Не хочу вказувати"
+    },
+    "settings": {
+        "title": "Налаштування",
+        "language": "Мова",
+        "theme": "Тема",
+        "dark": "Темна",
+        "light": "Світла",
+        "system": "Системна"
+    },
+    "pages": {
+        "home": "Головна",
+        "cattegories": "Категорії",
+        "cart": "Корзина",
+        "dashboard": "Інфо панель",
+        "profile": "Профіль"
     }
 }
