add home and goods pages for seller

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -83,6 +83,8 @@
         "cattegories": "Категорії",
         "cart": "Корзина",
         "dashboard": "Інфо панель",
-        "profile": "Профіль"
+        "profile": "Профіль",
+        "orders": "Замовлення",
+        "goods": "Товари"
     }
 }
