add requests for getting categories

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -86,5 +86,77 @@
         "profile": "Профіль",
         "orders": "Замовлення",
         "goods": "Товари"
+    },
+    "categories": {
+        "electronics": "Електроніка",
+        "sports": "Спорт",
+        "clothing": "Одяг",
+        "shoes": "Взуття",
+        "accessories": "Аксесуари",
+        "home": "Для дому",
+        "beauty": "Краса",
+        "tools": "Інструменти",
+        "games": "Ігри",
+        "furniture": "Меблі",
+
+        "smartphones": "Смартфони та аксесуари",
+        "laptops": "Ноутбуки та комп'ютери",
+        "televisions": "Телевізори та аудіо",
+        "photo": "Фото та відеотехніка",
+        "household": "Побутова техніка",
+
+        "fitness": "Фітнес-обладнання",
+        "bicycles": "Велосипеди та аксесуари",
+        "travel": "Туристичне спорядження",
+        "fishing": "Рибальські знаряддя",
+        "sports_nutrition": "Спортивне харчування",
+
+        "womens_clothing": "Жіночий одяг",
+        "mens_clothing": "Чоловічий одяг",
+        "headwear": "Головні убори",
+        "childrens_clothing": "Дитячий одяг",
+        "thermal": "Термобілизна",
+
+        "shoes_sub": "Туфлі",
+        "sneakers": "Кросівки",
+        "boots": "Черевики",
+        "slippers": "Тапочки",
+        "work_shoes": "Робоче та захисне взуття",
+
+        "watches": "Годинники та браслети",
+        "glasses": "Окуляри",
+        "bags": "Сумки та портфелі",
+        "scarves": "Шарфи та платки",
+        "jewelry": "Ювелірні вироби",
+
+        "tableware": "Посуд",
+        "bed_linen": "Постільна білизна та рушники",
+        "decor": "Декор",
+        "for_cleaning": "Для прибирання",
+        "stationery": "Канцелярські товари",
+
+        "cosmetics": "Косметика",
+        "hair_care": "Засоби для волосся",
+        "perfumery": "Парфумерія",
+        "body_care": "Догляд за тілом",
+        "manicure": "Манікюр та педикюр",
+
+        "electric_tools": "Електро інструменти",
+        "hand_tools": "Ручні інструменти",
+        "garden": "Садовий інвентар",
+        "building": "Будівельні матеріали",
+        "automotive": "Автомобільні інструменти",
+        
+        "board_games": "Настільні ігри",
+        "video_games": "Відеоігри",
+        "soft_toys": "М'які іграшки",
+        "game_consoles": "Ігрові консолі та аксесуари",
+        "construction": "Конструктор",
+        "upholstered": "М'які меблі",
+        "cabinets": "Шафи",
+        "kitchen": "Меблі для кухні",
+        "office": "Офісні меблі",
+        "tables": "Столи та стільці"
+        
     }
 }
